--- a/src/less/datetime-picker.less
+++ b/src/less/datetime-picker.less
@@ -22,6 +22,8 @@
   padding: 12px 15px;
   border-radius: 3px;
   border: 1px solid @color-gray;
+  background-color: #ffffff;
+  outline: none;
 
   .options {
     width: 100%;
@@ -68,7 +70,7 @@
     margin-bottom: 11px;
   }
 
-  .btn-save {
+  .btn-done {
     display: block;
     margin-top: 10px;
     width: 100%;
