Added date ranges via "range" prop.

--- a/example/app.less
+++ b/example/app.less
@@ -17,7 +17,7 @@ body {
     margin-bottom: 20px;
   }
 
-  input {
+  input[type="text"] {
     padding: 7px 8px;
     font-size: 14px;
     width: 100%;
